refactor: remove unused components and streamline theme management
- Deleted `components.d.ts` as it is no longer needed.
- Removed `@nuxt/ui/vue-plugin` usage from `app.ts` and updated SSR setup in `ssr.ts` to include head management.
- Introduced `ClientOnly` component to handle client-side rendering for modals in various components.
- Refactored `ColorModeButton` to utilize `@vueuse/core` for color mode management.
- Updated CSS imports and theme variables in `app.css`.
- Cleaned up `workspace.vue` layout by moving script logic to the bottom and utilizing `ClientOnly` for modal rendering.
- Adjusted `bookmarks.vue` and `memos.vue` to use `ClientOnly` for modal components.
- Updated TypeScript configuration to include auto-imports and component declarations.
- Added `unplugin-auto-import` and `@unhead/vue` dependencies for improved auto-import functionality.
- Modified `vite.config.ts` to enable auto-imports and component declarations.
- Cleaned up the HTML structure in `inertia_layout.edge` for better readability.

--- a/inertia/tsconfig.json
+++ b/inertia/tsconfig.json
@@ -9,5 +9,5 @@
       "~/*": ["./*"]
     }
   },
-  "include": ["./**/*.ts", "./**/*.vue"]
+  "include": ["./**/*.ts", "./**/*.vue", "auto-imports.d.ts", "components.d.ts"]
 }
