--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^3.5.3",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8.3",
+    "unplugin-auto-import": "^21.0.0",
     "vite": "^6.3.5"
   },
   "dependencies": {
@@ -63,8 +64,10 @@
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/vue3": "^2.3.9",
     "@nuxt/ui": "^4.3.0",
+    "@unhead/vue": "^2.1.2",
     "@vinejs/vine": "^3.0.1",
     "@vue/server-renderer": "^3.5.26",
+    "@vueuse/core": "^14.1.0",
     "edge.js": "^6.2.1",
     "luxon": "^3.7.2",
     "pg": "^8.17.1",
